--- a/docker-compose.builder.yml
+++ b/docker-compose.builder.yml
@@ -3,8 +3,8 @@ services:
   base:
     image: node:11-alpine
     volumes:
-      - .:/usr/src/service
-    working_dir: /usr/src/service
+      - .:/app
+    working_dir: /app
 
   install:
     extends:
