--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   dev:
     image: shadowcljs-base:11
     volumes:
-      - .:/usr/src/service
-    working_dir: /usr/src/service
+      - .:/app
+    working_dir: /app
     command: npm run watch
     ports:
       - 8700:8700
